# nlp

./: 3_写作文本中的词汇分析.ipynb  requirements.txt
Chapter3/: .dockerignore  .gitignore  3_写作文本中的词汇分析.ipynb  Dockerfile  app.py  pyproject.toml  requirements.txt  写作文本中的词汇分析.ipynb
Chapter3/DATA/: 3.txt  8.txt  9.txt
Chapter3/src/LCA/LCA_code/: folder-lc-anc.py  folder-lc.py  lc-anc.py  lc.py
Chapter3/src/TAALED/: process_fn.py  taaled.py
Chapter3/src/TAALES/: taales_2.2_index_guide_11-8-2016.xlsx
Chapter3/src/TAMMI/: TAMMI Index Description Spreadsheet.xlsx  process_fn.py
Chapter4/: .gitignore  4_写作文本中的句子结构分析.ipynb  requirements.txt
Chapter4/DATA/: 1.txt  2.txt  6.txt  7.txt
Chapter4/TAASSC/: TAASSC.py
Chapter5/: .gitignore  5_写作文本中的语篇结构分析.ipynb  app.py  model_roberta.py  preprocess_data.py  pyproject.toml  requirements.txt
Chapter5/test_data/: G20210103_W0.txt  G20210103_W1.txt  G20210103_W2.txt  G20210103_W3.txt  G20210103_W4.txt  G20210103_W5.txt  G20210103_W7.txt  G20210105_W0.txt  G20210105_W1.txt
DATA/: 10.txt  4.txt  5.txt
src/LCA/LCA_code/: lc.py
src/TAALED/: process_fn.py
