[project]
name = "chapter3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "en-core-web-sm",
    "gradio>=5.25.0",
    "matplotlib==3.9.2",
    "numpy==2.0.2",
    "pip>=25.0.1",
    "pyspellchecker==0.8.1",
    "spacy==3.8.2",
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
